--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body class="font-inter overflow-x-hidden">
-    <!-- ==== NAVBAR SECTION ==== -->
+    <!-- ==== NAVBAR ==== -->
     <section
       class="bg-white flex justify-center items-center py-5 w-full fixed z-10 drop-shadow-md"
     >
@@ -194,28 +194,36 @@
         class="slides absolute left-0 top-[103px] flex flex-row-reverse h-[720px] w-full transition-all duration-500"
       >
         <div
-          class="w-1/2 h-full bg-[url('/public/images/slider_1.png')] bg-cover bg-no-repeat"
+          class="w-1/2 h-full bg-[url('/public/images/slider_1.png')] bg-cover bg-no-repeat hidden sm:block"
         ></div>
-        <div class="w-1/2 max-w-[768px] h-full bg-darkbeige">
-          <div id="slide-1-content-wrapper" class="py-24 pl-20 pr-36">
-            <h1 class="text-[64px] font-monts font-medium leading-[115%] mb-12">
+        <div
+          class="sm:w-1/2 max-w-[768px] h-full bg-[url('/public/images/slider_1.png')] sm:bg-darkbeige sm:bg-none"
+        >
+          <div
+            class="md:py-24 md:px-20 lg:pr-36 pt-16 pb-24 sm:pb-16 px-12 h-full bg-darkbeige bg-opacity-[0.85] sm:bg-transparent flex flex-col justify-center sm:block"
+          >
+            <h1
+              class="text-center md:text-left font-monts font-medium leading-[115%] mb-12 2xl:text-6xl xl:text-5xl text-4xl"
+            >
               Nowoczesna aranżacja <br />
               Twojego ogrodu
             </h1>
-            <h5 class="text-[17px] leading-[165%] mb-12 pr-12">
+            <h5
+              class="text-center md:text-left leading-[165%] mb-12 2xl:pr-12 text-md xl:text-[17px]"
+            >
               Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka
               realizacji. Oferujemy kompleksowy zakres usług z indywidualnym
               podejściem do każdego projektu.
             </h5>
-            <div class="flex w-full gap-x-10">
+            <div class="flex w-full gap-y-5 flex-col 2xl:flex-row 2xl:gap-x-10">
               <button
-                class="px-6 bg-forestgreen hover:bg-gradient-to-t hover:from-forestgreen hover:to-green-800 font-light text-white hover:-translate-y-1 hover:drop-shadow-xl rounded-full transition-all"
+                class="sm:w-auto lg:w-64 px-6 py-3 bg-forestgreen hover:bg-gradient-to-t hover:from-forestgreen hover:to-green-800 font-light text-white hover:-translate-y-1 hover:drop-shadow-xl rounded-full transition-all 2xl:w-auto"
               >
                 Skontaktuj się z nami
               </button>
               <a href="#masonry-section">
                 <button
-                  class="flex w-64 items-center justify-center gap-x-2 py-3 group bg-transparent hover:rotate-3 hover:bg-white hover:bg-opacity-20 text-forestgreen border-solid border-2 border-forestgreen transition-all rounded-full"
+                  class="w-full lg:w-64 flex items-center justify-center gap-x-2 py-3 group bg-transparent lg:hover:rotate-3 hover:bg-white hover:bg-opacity-20 text-forestgreen border-solid border-2 border-forestgreen transition-all rounded-full"
                 >
                   Zobacz nasze realizacje
                   <svg
@@ -224,7 +232,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-6 h-6"
+                    class="w-6 h-6 hidden lg:block"
                   >
                     <path
                       stroke-linecap="round"
@@ -244,8 +252,10 @@
           class="w-1/2 h-full bg-[url('/public/images/slider_2.jpg')] bg-cover bg-no-repeat"
         ></div>
         <div class="w-1/2 max-w-[768px] h-full bg-darkbeige">
-          <div id="slide-2-content-wrapper" class="py-16 pl-20 pr-32">
-            <h3 class="text-[60px] font-monts font-medium leading-[115%] mb-12">
+          <div class="py-16 pl-20 pr-32">
+            <h3
+              class="2xl:text-6xl xl:text-5xl font-monts font-medium leading-[115%] mb-12"
+            >
               Magiczna przestrzeń przez Cztery Pory Roku
             </h3>
             <h5 class="text-[17px] leading-[165%] mb-12 pr-8">
@@ -274,8 +284,10 @@
           class="w-1/2 h-full bg-[url('/public/images/slider_3.jpg')] bg-cover bg-no-repeat"
         ></div>
         <div class="w-1/2 max-w-[768px] h-full bg-darkbeige">
-          <div id="slide-1-content-wrapper" class="py-20 pl-20 pr-36">
-            <h3 class="text-[64px] font-monts font-medium leading-[115%] mb-12">
+          <div class="py-20 pl-20 pr-36">
+            <h3
+              class="2xl:text-6xl xl:text-5xl font-monts font-medium leading-[115%] mb-12"
+            >
               Żniwa z Twojego ogrodu
             </h3>
             <h5 class="text-[17px] leading-[165%] mb-12 pr-12">
@@ -303,7 +315,7 @@
     >
       <!-- ==== SLIDER NAV ====-->
       <div
-        class="slider-nav flex justify-center bg-lightbeige items-center absolute right-0 translate-y-[-100%] rounded-t-lg overflow-hidden drop-north-shadow"
+        class="slider-nav flex justify-center bg-lightbeige items-center absolute right-0 translate-y-[-100%] rounded-tl-lg 2xl:rounded-t-lg overflow-hidden drop-north-shadow"
       >
         <button
           onClick="plusDivs(-1)"
