add responsive offer

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-12 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-36"
           >
             <h1
-              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 sm:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
+              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
             >
               Nowoczesna aranżacja
               <br />
@@ -308,7 +308,7 @@
             class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-12 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-16"
           >
             <h3
-              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 sm:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
+              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
             >
               Magiczna przestrzeń przez Cztery Pory Roku
             </h3>
@@ -336,34 +336,7 @@
       </div>
 
       <!-- ==== THIRD SLIDE ==== -->
-      <!-- <div
-        class="slides slide-right absolute left-0 top-[88px] flex h-[560px] w-full flex-row-reverse transition-all duration-500 sm:top-[80px] sm:h-[720px] md:top-[95px] lg:top-[99px]"
-      >
-        <div
-          class="h-full w-1/2 bg-[url('/public/images/slider_3.jpg')] bg-cover bg-no-repeat"
-        ></div>
-        <div class="bg-darkbeige h-full w-1/2 max-w-[768px]">
-          <div class="py-20 pl-20 pr-36">
-            <h3 class="font-monts mb-12 font-medium leading-[115%] xl:text-5xl 2xl:text-6xl">
-              Żniwa z Twojego ogrodu
-            </h3>
-            <h5 class="mb-12 pr-12 text-[17px] leading-[165%]">
-              Jeśli jesteś miłośnikiem świeżych warzyw i ziół, nasze ogrody warzywne są dla Ciebie
-              stworzone. Projektujemy ogrody, które nie tylko zachwycają estetyką, ale także
-              dostarczają świeżych, organicznych produktów prosto z Twojego podwórka. Nasze pomysły
-              łączą funkcjonalność, ekologię i piękno, umożliwiając Ci czerpanie radości zarówno z
-              uprawy, jak i spożywania własnych plonów.
-            </h5>
-            <div class="flex w-full gap-x-10">
-              <button
-                class="bg-forestgreen hover:from-forestgreen w-56 rounded-full py-3 font-light text-white transition-all hover:-translate-y-1 hover:bg-gradient-to-t hover:to-green-800 hover:drop-shadow-xl"
-              >
-                Dowiedz się więcej
-              </button>
-            </div>
-          </div>
-        </div>
-      </div> -->
+    
       <div
         class="slides slide-right absolute left-0 top-[88px] flex h-[560px] w-full flex-row-reverse transition-all duration-500 sm:top-[80px] sm:h-[720px] md:top-[95px] lg:top-[99px]"
       >
@@ -374,10 +347,10 @@
           class="sm:bg-darkbeige h-full max-w-[768px] bg-[url('/public/images/slider_3.jpg')] sm:w-1/2 sm:bg-none"
         >
           <div
-            class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-12 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-16"
+            class="bg-darkbeige flex h-full flex-col justify-center bg-opacity-[0.85] px-8 pb-16 pt-0 sm:block sm:bg-transparent sm:pt-16 md:px-20 md:py-24 lg:pr-16"
           >
             <h3
-              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 sm:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
+              class="font-monts mb-4 text-center text-2xl font-medium leading-[115%] sm:mb-12 md:text-4xl md:text-left xl:text-5xl 2xl:text-6xl"
             >
               Żniwa z Twojego ogrodu
             </h3>
@@ -388,7 +361,7 @@
               stworzone. Projektujemy ogrody, które nie tylko zachwycają estetyką, ale także
               dostarczają świeżych, organicznych produktów prosto z Twojego podwórka. Nasze pomysły
               łączą funkcjonalność, ekologię i piękno
-              <p class="hidden sm:inline">
+              <p class="hidden lg:inline">
                 , umożliwiając Ci czerpanie radości zarówno z uprawy, jak i spożywania własnych
                 plonów.
               </p>
@@ -414,7 +387,7 @@
       >
         <button
           onClick="plusDivs(-1)"
-          class="hover:bg-forestgreen flex h-20 w-20 items-center justify-center transition-all hover:text-white"
+          class="hover:bg-forestgreen flex md:h-20 md:w-20 h-16 w-16 items-center justify-center transition-all hover:text-white"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -422,7 +395,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="h-7 w-7"
+            class="md:h-7 md:w-7 h-7 w-7"
           >
             <path
               stroke-linecap="round"
@@ -433,7 +406,7 @@
         </button>
         <button
           onClick="plusDivs(+1)"
-          class="hover:bg-forestgreen flex h-20 w-20 items-center justify-center transition-all hover:text-white"
+          class="hover:bg-forestgreen flex md:h-20 md:w-20 h-16 w-16 items-center justify-center transition-all hover:text-white"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -441,7 +414,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="h-7 w-7"
+            class="md:h-7 md:w-7 h-7 w-7 "
           >
             <path
               stroke-linecap="round"
@@ -452,9 +425,9 @@
         </button>
       </div>
       <!-- ==== OFFER HEADER ====-->
-      <div class="ml-64 max-w-3xl pt-28">
+      <div class="mx-auto px-6 sm:px-12 xl:ml-64 max-w-3xl md:pt-28 sm:pt-24 pt-16">
         <h3 class="text-md text-forestgreen">Oferta</h3>
-        <h5 class="font-monts mt-5 text-5xl font-medium">
+        <h5 class="font-monts mt-5 lg:text-5xl font-medium text-4xl">
           Działamy
           <i class="font-inter">kompleksowo</i>
         </h5>
@@ -465,19 +438,19 @@
         </p>
       </div>
       <!-- ==== GRID COLUMNS ====-->
-      <div class="mt-20 grid grid-cols-3 gap-16 px-24">
-        <div class="flex aspect-square h-full w-full flex-col rounded-3xl bg-white p-12">
+      <div class="mt-10 sm:mt-16 lg:mt-20 grid grid-cols-1 sm:grid-cols-3 2xl:gap-16 xl:gap-12 lg:gap-10 md:gap-8 sm:gap-5 gap-8 2xl:px-24 xl:px-16 md:px-8 sm:px-6 px-5">
+        <div class="flex sm:aspect-square h-full w-full flex-col rounded-3xl bg-white 2xl:p-12 xl:p-8 p-6">
           <div
-            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-10 w-10 animate-ping rounded-full"
+            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 lg:h-8 lg:w-8 2xl:h-10 2xl:w-10 animate-ping rounded-full"
           ></div>
-          <img src="/public/images/offer_icon_1.svg" class="absolute h-12 w-12" />
-          <h6 class="font-monts mt-[72px] text-3xl font-medium">Projekty</h6>
-          <p class="mt-3">
+          <img src="/public/images/offer_icon_1.svg" class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12 " />
+          <h6 class="font-monts mt-12 lg:mt-14 xl:mt-20 text-2xl lg:text-3xl font-medium">Projekty</h6>
+          <p class="mt-3 mb-2">
             Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej
             przestrzeni.
           </p>
           <a
-            class="text-forestgreen border-forestgreen group mr-auto mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
+            class="text-forestgreen border-forestgreen group mr-auto mt-2 sm:mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
             href=""
             >Dowiedz się więcej
             <svg
@@ -496,18 +469,18 @@
             </svg>
           </a>
         </div>
-        <div class="flex aspect-square h-full w-full flex-col rounded-3xl bg-white p-12">
+        <div class="flex sm:aspect-square h-full w-full flex-col rounded-3xl bg-white 2xl:p-12 xl:p-8 p-6">
           <div
-            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-10 w-10 animate-ping rounded-full"
+            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 lg:h-8 lg:w-8 2xl:h-10 2xl:w-10 animate-ping rounded-full"
           ></div>
-          <img src="/public/images/offer_icon_2.svg" class="absolute h-12 w-12" />
-          <h6 class="font-monts mt-[72px] text-3xl font-medium">Wizualizacje</h6>
-          <p class="mt-3">
+          <img src="/public/images/offer_icon_2.svg" class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12" />
+          <h6 class="font-monts mt-12 lg:mt-14 xl:mt-20 text-2xl lg:text-3xl font-medium">Wizualizacje</h6>
+          <p class="mt-3 mb-2">
             Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w
             technologii 3D.
           </p>
           <a
-            class="text-forestgreen border-forestgreen group mr-auto mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
+            class="text-forestgreen border-forestgreen group mr-auto mt-2 sm:mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
             href=""
             >Dowiedz się więcej
             <svg
@@ -526,18 +499,18 @@
             </svg>
           </a>
         </div>
-        <div class="flex aspect-square h-full w-full flex-col rounded-3xl bg-white p-12">
+        <div class="flex sm:aspect-square h-full w-full flex-col rounded-3xl bg-white 2xl:p-12 xl:p-8 p-6">
           <div
-            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-10 w-10 animate-ping rounded-full"
+            class="bg-darkbeige time-3000 absolute ml-1 mt-1 h-6 w-6 lg:h-8 lg:w-8 2xl:h-10 2xl:w-10 animate-ping rounded-full"
           ></div>
-          <img src="/public/images/offer_icon_3.svg" class="absolute h-12 w-12" />
-          <h6 class="font-monts mt-[72px] text-3xl font-medium">Realizacje</h6>
-          <p class="mt-3">
+          <img src="/public/images/offer_icon_3.svg" class="absolute h-8 w-8 lg:h-10 lg:w-10 xl:h-12 xl:w-12" />
+          <h6 class="font-monts mt-12 lg:mt-14 xl:mt-20 text-2xl lg:text-3xl font-medium">Realizacje</h6>
+          <p class="mt-3 mb-2">
             Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych
             technologii.
           </p>
           <a
-            class="text-forestgreen border-forestgreen group mr-auto mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
+            class="text-forestgreen border-forestgreen group mr-auto mt-2 sm:mt-auto flex items-center gap-x-2 border-b-[1px] border-solid pb-1 pr-1 font-medium transition-all hover:pl-1 hover:pr-0"
             href=""
             >Zobacz nasze realizacje
             <svg
